--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,6 +1,7 @@
 $primary-text-color: #ffffff;
 $logo-color: #6d6d6d;
 $secondary-text-color: #949494;
+$text-btn-color: #121212;
 $bg-color: #1b1b1a;
 $bg-color-primary: #eccf94;
 $btn-color: #eccf94;
