--- a/src/scss/_section-settings.scss
+++ b/src/scss/_section-settings.scss
@@ -1,10 +1,13 @@
 .settings {
-  padding-bottom: 100px;
+  padding-bottom: 50px;
   position: relative;
+  @include desktop {
+    padding-bottom: 100px;
+  }
 }
 
 .settings__title {
-  font-size: 40px;
+  font-size: 21px;
   line-height: 1.38;
   text-align: center;
   letter-spacing: 0.07em;
@@ -21,11 +24,20 @@
   text-fill-color: transparent;
 
   margin-bottom: 67px;
+
+  @include tablet {
+    font-size: 28px;
+  }
+  @include desktop {
+    font-size: 40px;
+  }
 }
 
 .settings-form {
-  display: flex;
-  gap: 84px;
+  @include desktop {
+    display: flex;
+    gap: 84px;
+  }
 }
 .form {
   display: flex;
@@ -45,14 +57,20 @@
   display: flex;
   align-items: center;
   justify-self: centre;
-  width: 410px;
+  width: 210px;
   margin-bottom: 5px;
-  margin-left: 39px;
-  margin-right: 47px;
+  margin-left: 15px;
+  margin-right: 15px;
 
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+
+  @include tablet {
+    width: 410px;
+    margin-left: 39px;
+    margin-right: 47px;
+  }
 }
 
 .form__rate::-webkit-slider-runnable-track {
@@ -69,12 +87,18 @@
   background: $accent-color;
   border-radius: 2px;
   cursor: pointer;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   appearance: none;
   -webkit-appearance: none;
-  margin-top: -15px;
+  margin-top: -10px;
   box-shadow: 0 0 0 2px $accent-color;
+
+  @include tablet {
+    width: 30px;
+    height: 30px;
+    margin-top: -15px;
+  }
 }
 
 .form__rate::-moz-range-thumb {
@@ -82,10 +106,16 @@
   background: $accent-color;
   border-radius: 2px;
   appearance: none;
-  height: 30px;
-  margin-top: -15px;
+  height: 20px;
+  margin-top: -10px;
   padding: 0px;
   box-shadow: 0 0 0 2px $accent-color;
+
+  @include tablet {
+    width: 30px;
+    height: 30px;
+    margin-top: -15px;
+  }
 }
 .form__range-panel {
   display: flex;
@@ -95,10 +125,14 @@
 
 .form__text {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 10px;
   line-height: 3.06;
   text-align: center;
   color: $primary-text-color;
+
+  @include tablet {
+    font-size: 18px;
+  }
 }
 
 .panel-gallery__btn-input {
@@ -113,8 +147,11 @@
 .panel-gallery {
   display: flex;
   align-items: center;
-  gap: 26px;
+  gap: 5px;
   margin-bottom: 18px;
+  @include tablet {
+    gap: 26px;
+  }
 }
 
 .line-list {
@@ -142,9 +179,17 @@
 }
 
 .checkbox__container {
-  display: flex;
-  gap: 143px;
-  margin-bottom: 80px;
+  margin-bottom: 120px;
+
+  @include tablet {
+    display: flex;
+    gap: 143px;
+    margin-bottom: 150px;
+  }
+
+  @include desktop {
+    margin-bottom: 80px;
+  }
 }
 
 .checkbox__box {
@@ -197,10 +242,10 @@
   border: none;
   font-family: inherit;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.67;
-  width: 254px;
-  height: 60px;
+  width: 200px;
+  height: 48px;
   background-image: url(../img/btn-form.webp);
   background-position: top 0 left 0;
   background-repeat: no-repeat;
@@ -213,45 +258,102 @@
   @include retina {
     background-image: url(../img/btn-form@2x.webp);
   }
+
+  @include tablet {
+    font-size: 18px;
+
+    width: 254px;
+    height: 60px;
+  }
 }
 
 .choose-information {
   position: absolute;
-  top: 630px;
-  left: 123px;
+  top: 870px;
+  left: 15px;
   display: flex;
-  gap: 215px;
+
+  gap: 25px;
+
+  @media screen and (min-width: 375px) and (max-width: 424px) {
+    left: 45px;
+  }
+
+  @media screen and (min-width: 425px) and (max-width: 767px) {
+    left: 75px;
+  }
+
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    top: 970px;
+  }
+
+  @media screen and (max-width: 767px) {
+    justify-content: center;
+  }
+
+  @include tablet {
+    position: absolute;
+    top: 970px;
+    right: 300px;
+    display: flex;
+    gap: 35px;
+  }
+  @include desktop {
+    position: absolute;
+    top: 630px;
+    left: 123px;
+    display: flex;
+    gap: 215px;
+  }
 }
 
 .choose-information__text {
   font-weight: 500;
-  font-size: 12px;
+  font-size: 10px;
   line-height: 4.58;
   letter-spacing: 0.135em;
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.5);
+
+  @include tablet {
+    font-size: 12px;
+  }
 }
 .choose-information__bottom-text {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 16px;
   line-height: 2.29;
+
+  @include tablet {
+    font-size: 24px;
+  }
 }
 
 .choose-information__price {
   font-weight: 300;
-  font-size: 36px;
+  font-size: 16px;
   line-height: 1.11;
   letter-spacing: 0.05em;
 
   color: $accent-color;
+  @include tablet {
+    font-size: 36px;
+  }
 }
 .choose-information__circle {
-  width: 28px;
-  height: 28px;
   display: inline-block;
-  border-radius: 14px;
+  width: 18px;
+  height: 18px;
+  border-radius: 9px;
   background-color: #b8542a;
   margin-top: 7px;
+
+  @include tablet {
+    width: 28px;
+    height: 28px;
+    border-radius: 14px;
+    font-size: 24px;
+  }
 }
 
 .checkbox__input:checked + .checkbox__text + .checkbox__icon {
