fix img on section connection

--- a/src/scss/_section-connection.scss
+++ b/src/scss/_section-connection.scss
@@ -1,7 +1,7 @@
 .no-webp .connection {
-  background-image: url("../img/kamin-bg-connect.jpg");
+  background-image: url("../img/kamin-bg-connect.png");
   @include retina {
-    background-image: url("../img/kamin-bg-connect.jpg");
+    background-image: url("../img/kamin-bg-connect.png");
   }
 }
 
